push figs - attempt 2

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -97,7 +97,7 @@ img {
 <li>We configure the settings for our markdown file</li>
 </ul>
 <pre class="r"><code>knitr::opts_chunk$set(
-  fig.path=&quot;figures/&quot;
+  fig.path=&quot;figure/&quot;
   ,fig.width=12
   )</code></pre>
 </div>
