--- a/PA1_template.html
+++ b/PA1_template.html
@@ -117,7 +117,30 @@ img {
 library(ggplot2,warn.conflicts=F)
 library(lubridate,warn.conflicts=F)
 library(knitr,warn.conflicts=F)
-library(tidyr,warn.conflicts=F)</code></pre>
+library(tidyr,warn.conflicts=F)
+
+sessionInfo()</code></pre>
+<pre><code>## R version 3.2.4 (2016-03-10)
+## Platform: x86_64-apple-darwin13.4.0 (64-bit)
+## Running under: OS X 10.11.3 (El Capitan)
+## 
+## locale:
+## [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+## 
+## attached base packages:
+## [1] stats     graphics  grDevices utils     datasets  methods   base     
+## 
+## other attached packages:
+## [1] tidyr_0.4.1     knitr_1.12.3    lubridate_1.5.0 ggplot2_2.1.0  
+## [5] dplyr_0.4.3    
+## 
+## loaded via a namespace (and not attached):
+##  [1] Rcpp_0.12.3      digest_0.6.9     assertthat_0.1   plyr_1.8.3      
+##  [5] grid_3.2.4       R6_2.1.2         gtable_0.2.0     DBI_0.3.1       
+##  [9] formatR_1.2.1    magrittr_1.5     scales_0.4.0     evaluate_0.8    
+## [13] stringi_1.0-1    rmarkdown_0.9.2  tools_3.2.4      stringr_1.0.0   
+## [17] munsell_0.4.3    yaml_2.1.13      parallel_3.2.4   colorspace_1.2-6
+## [21] htmltools_0.3</code></pre>
 </div>
 <div id="data-setup" class="section level2">
 <h2>Data Setup</h2>
